--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,8 +1,8 @@
 CXX = g++-8
-CXXFLAGS = -std=c++11 -O3 -march=native -funroll-loops -fopenmp
+CXXFLAGS = -std=c++1z -O3 -march=native -funroll-loops -fopenmp
 
 .PHONY: all
-all: example
+all: example task1 image2 task3
 
 example: example.cpp
 
@@ -11,8 +11,10 @@ task1: task1.cpp
 task2: task2.cpp
 
 image2: task2
-	./task2 0.7 100
+	./task2 0.6 100 10 1
 	convert task2_*.png task2.gif
+
+task3: task3.cpp
 
 .PHONY: clean
 clean:
