Continue work on ex04

--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -2,11 +2,11 @@ CXX = g++-8
 CXXFLAGS = -std=c++1z -O3 -march=native -funroll-loops 
 
 .PHONY: all
-all: task figure 
+all: task1 task2 figure1 figure2 
 
-task: task.cpp
+task1: task1.cpp
 
-figure: task figure.gplt
+figure1: task1 figure1.gplt
 	./task 10 1000 1 100 > results.dat
 	gnuplot figure.gplt
 
