Finish code ex04

--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -2,14 +2,14 @@ CXX = g++-8
 CXXFLAGS = -std=c++1z -O3 -march=native -funroll-loops 
 
 .PHONY: all
-all: task1 task2 figure1 figure2 
+all: task figures 
 
-task1: task1.cpp
+task: task.cpp
 
-figure1: task1 figure1.gplt
-	./task 10 1000 1 100 > results.dat
-	gnuplot figure.gplt
+figures: task figures.gplt
+	./task 1024 1 > results.dat
+	gnuplot figures.gplt
 
 .PHONY: clean
 clean:
-	@rm -rf task *.png *.dat 
+	@rm -rf task *.dat *.eps *.aux *.log *.synctex 
