--- a/ex11/Makefile
+++ b/ex11/Makefile
@@ -2,19 +2,19 @@ CXX = g++-8
 CXXFLAGS = -std=c++1z -O3 -march=native -funroll-loops -ffast-math
 CXXFLAGS += -I/usr/local/include/eigen3
 
-
 .PHONY: all
-all: main output.dat figures 
+all: main output figures 
 
 main: main.cpp 
 
-output.dat: main
-	./main 80 40.0 1.0 9.81 0.001 15000 > output.dat
+.PHONY: output
+output: main
+	./main 50 0.25 0.75 
 
 .PHONY: figures
-figures: output.dat figures.gplt
-	gnuplot figures.gplt
+figures: output plot.py
+	python3 plot.py
 
 .PHONY: clean
 clean:
-	@rm -rf main *.dat *.aux *.log *.synctex 
+	@rm -rf main *.dat *.aux *.log *.synctex *.txt 
